gitops/manifests/romm/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: romm
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: romm
  namespace: romm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: romm
  template:
    metadata:
      labels:
        app: romm
        app.kubernetes.io/name: romm
    spec:
      containers:
        - name: romm
          image: rommapp/romm:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: resources
              mountPath: /romm/resources
            - name: library
              mountPath: /romm/library
            - name: assets
              mountPath: /romm/assets
            - name: config
              mountPath: /romm/config
      volumes:
        - name: resources
          persistentVolumeClaim:
            claimName: romm-resources-pvc
        - name: library
          persistentVolumeClaim:
            claimName: romm-library-pvc
        - name: assets
          persistentVolumeClaim:
            claimName: romm-assets-pvc
        - name: config
          persistentVolumeClaim:
            claimName: romm-config-pvc
        - name: config-default
          configMap:
            name: romm-config-default
---
apiVersion: v1
kind: Service
metadata:
  name: romm
  namespace: romm
spec:
  selector:
    app: romm
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: romm-internal
  namespace: romm
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`romm.local.timmybtech.com`)
      kind: Rule
      services:
        - name: romm
          port: 80
  tls:
    secretName: local-timmybtech-com-tls
